[VSIM-117] set overflow for thumbnail divs to auto, to avoid truncation of captions

--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -87,6 +87,7 @@
     width: auto;
     height: 300px;
     max-height: 100%;
+    overflow: auto;
 }
 
 .thumbnail h1{
